--- a/flashcards.html
+++ b/flashcards.html
@@ -22,7 +22,7 @@
                 <p>What is sushi traditionally wrapped in?</p>
             </div>
             <div class="back">
-                <p>Nori (seaweed)</p>
+                <p>Seaweed</p>
             </div>
         </div>
 
